Update NotesWindow basic structure using a dock panel as main element and adding inside it a menu (docked to the top) and a grid.

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -6,7 +6,12 @@
         xmlns:local="clr-namespace:EvernoteClone.View"
         mc:Ignorable="d"
         Title="NotesWindow" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            
+        </Menu>
+        <Grid>
+            
+        </Grid>
+    </DockPanel>
 </Window>
