--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -10,6 +10,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="New notebook"/>
+                <MenuItem Header="New note"/>
             </MenuItem>
         </Menu>
         <Grid>
