Update NotesWindow, add separator in the file menu item

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -11,6 +11,7 @@
             <MenuItem Header="File">
                 <MenuItem Header="New notebook"/>
                 <MenuItem Header="New note"/>
+                <Separator />
             </MenuItem>
         </Menu>
         <Grid>
