Update NotesWindow, add exit menu item in the file menu item

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -12,6 +12,7 @@
                 <MenuItem Header="New notebook"/>
                 <MenuItem Header="New note"/>
                 <Separator />
+                <MenuItem Header="Exit"/>
             </MenuItem>
         </Menu>
         <Grid>
