Update NotesWindow, add Exit_Click method and assign it in the relative option in the menu

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -12,7 +12,7 @@
                 <MenuItem Header="New notebook"/>
                 <MenuItem Header="New note"/>
                 <Separator />
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
         </Menu>
         <Grid>
