--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -10,7 +10,7 @@
     <Window.Resources>
         <vw:NotesVM x:Key="vm"/>
     </Window.Resources>
-    <DockPanel>
+    <DockPanel DataContext="{StaticResource vm}">
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="New notebook"/>
