--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -13,7 +13,7 @@
     <DockPanel DataContext="{StaticResource vm}">
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
-                <MenuItem Header="New notebook"/>
+                <MenuItem Header="New notebook" Command="{Binding NewNotebookCommand}"/>
                 <MenuItem Header="New note"/>
                 <Separator />
                 <MenuItem Header="Exit" Click="Exit_Click"/>
