--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -14,7 +14,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="New notebook" Command="{Binding NewNotebookCommand}"/>
-                <MenuItem Header="New note"/>
+                <MenuItem Header="New note" Command="{Binding NewNoteCommand}"/>
                 <Separator />
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
