Update notes window, remove grid and instead place a list view docked to the left

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -19,8 +19,8 @@
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
         </Menu>
-        <Grid>
+        <ListView DockPanel.Dock="Left">
             
-        </Grid>
+        </ListView>
     </DockPanel>
 </Window>
