Duplicate the list view in the notes window, one is for the notebooks and the other for the notes

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -22,5 +22,8 @@
         <ListView DockPanel.Dock="Left" Width="140">
             
         </ListView>
+        <ListView DockPanel.Dock="Left" Width="140">
+
+        </ListView>
     </DockPanel>
 </Window>
