Add a Grid in the notes window, this grid will use all the remain space in the window

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -25,5 +25,8 @@
         <ListView DockPanel.Dock="Left" Width="140">
 
         </ListView>
+        <Grid>
+            
+        </Grid>
     </DockPanel>
 </Window>
