Add a ToolBarTray docked to the top on the notes window

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -25,6 +25,9 @@
         <ListView DockPanel.Dock="Left" Width="140">
 
         </ListView>
+        <ToolBarTray DockPanel.Dock="Top">
+            
+        </ToolBarTray>
         <Grid>
             
         </Grid>
