--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -26,7 +26,7 @@
 
         </ListView>
         <ToolBarTray DockPanel.Dock="Top">
-            
+            <ToolBar />
         </ToolBarTray>
         <Grid>
             
