--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -26,7 +26,9 @@
 
         </ListView>
         <ToolBarTray DockPanel.Dock="Top">
-            <ToolBar />
+            <ToolBar>
+                <Button Content="Speech"/>
+            </ToolBar>
         </ToolBarTray>
         <Grid>
             
