Add speech button and relative empty click event in the notes window

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -27,7 +27,7 @@
         </ListView>
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
-                <Button Content="Speech"/>
+                <Button Content="Speech" Click="SpeechButton_Click"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
