--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -19,7 +19,7 @@
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
         </Menu>
-        <ListView DockPanel.Dock="Left" Width="140">
+        <ListView DockPanel.Dock="Left" Width="140" ItemsSource="{Binding Notebooks}">
             
         </ListView>
         <ListView DockPanel.Dock="Left" Width="140">
