Update notes window, add the list views data templates binding each list with the related data

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -20,10 +20,18 @@
             </MenuItem>
         </Menu>
         <ListView DockPanel.Dock="Left" Width="140" ItemsSource="{Binding Notebooks}">
-            
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
         <ListView DockPanel.Dock="Left" Width="140" ItemsSource="{Binding Notes}">
-
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Title}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
