Update notes window, add rich text box with a name

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -39,7 +39,7 @@
             </ToolBar>
         </ToolBarTray>
         <Grid>
-            
+            <RichTextBox x:Name="contentRichTextBox"/>
         </Grid>
     </DockPanel>
 </Window>
