Update notes window, add status bar docked to the bottom of dock panel

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -41,5 +41,8 @@
         <Grid>
             <RichTextBox x:Name="contentRichTextBox" TextChanged="contentRichTextBox_TextChanged"/>
         </Grid>
+        <StatusBar DockPanel.Dock="Bottom">
+            
+        </StatusBar>
     </DockPanel>
 </Window>
