--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -20,7 +20,9 @@
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
-
+            <StatusBarItem>
+                
+            </StatusBarItem>
         </StatusBar>
         <ListView DockPanel.Dock="Left" Width="140" ItemsSource="{Binding Notebooks}" SelectedItem="{Binding SelectedNotebook, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
