Update notes window, convert the bold button to toggle button

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -41,7 +41,7 @@
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
                 <Button Content="Speech" Click="SpeechButton_Click"/>
-                <Button Content="B" FontWeight="Bold" Click="BoldButton_Click"/>
+                <ToggleButton Content="B" FontWeight="Bold" Click="BoldButton_Click"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
