Update NotesWindow, update bold button click vent and add an empty selection changed event in the content rich text box to fix the toggle bold functionality

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -45,7 +45,7 @@
             </ToolBar>
         </ToolBarTray>
         <Grid>
-            <RichTextBox x:Name="contentRichTextBox" TextChanged="contentRichTextBox_TextChanged"/>
+            <RichTextBox x:Name="contentRichTextBox" TextChanged="contentRichTextBox_TextChanged" SelectionChanged="contentRichTextBox_SelectionChanged"/>
         </Grid>
     </DockPanel>
 </Window>
