--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -40,8 +40,8 @@
         </ListView>
         <ToolBarTray DockPanel.Dock="Top">
             <ToolBar>
-                <Button Content="Speech" Click="SpeechButton_Click"/>
-                <ToggleButton Content="B" FontWeight="Bold" Click="BoldButton_Click"/>
+                <Button x:Name="speechButton" Content="Speech" Click="SpeechButton_Click"/>
+                <ToggleButton x:Name="boldButton" Content="B" FontWeight="Bold" Click="BoldButton_Click"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
