Add empty  font family combobox and relative empty selection change event

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -46,6 +46,7 @@
                 <ToggleButton x:Name="underlineButton" Click="UnderlineButton_Click">
                     <TextBlock Text="U" TextDecorations="Underline"/>
                 </ToggleButton>
+                <ComboBox x:Name="fontFamilyComboBox" Width="100" SelectionChanged="FontFamilyComboBox_SelectionChanged"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
