--- a/EvernoteClone/View/UserControls/DisplayNotebook.xaml
+++ b/EvernoteClone/View/UserControls/DisplayNotebook.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
     <Grid>
-            
+        <TextBlock Text="{Binding Name}" Foreground="White" Margin="15" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
