Update notes window, add context menu with rename menu item inside the display notebook element binded with the notebook list view

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -29,7 +29,13 @@
                   SelectedItem="{Binding SelectedNotebook, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <uc:DisplayNotebook Notebook="{Binding}" />
+                    <uc:DisplayNotebook Notebook="{Binding}">
+                        <uc:DisplayNotebook.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="Rename"/>
+                            </ContextMenu>
+                        </uc:DisplayNotebook.ContextMenu>
+                    </uc:DisplayNotebook>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
