Add a text box inside the grid jsut added inside the display notebook object

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -37,6 +37,7 @@
                                 </ContextMenu>
                             </uc:DisplayNotebook.ContextMenu>
                         </uc:DisplayNotebook>
+                        <TextBox />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
