Update NotesWindow, bind Text and Visibility of the text box inide the grid in the notebooks list view data template to the relative properties of the notebook and the view model

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -37,7 +37,7 @@
                                 </ContextMenu>
                             </uc:DisplayNotebook.ContextMenu>
                         </uc:DisplayNotebook>
-                        <TextBox />
+                        <TextBox Text="{Binding Name}" Visibility="{Binding Source={StaticResource vm}, Path=IsVisible}"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
