Update NotesWindow, add the selected item binding in the note list view. This let select a note when user click a note in the related list view.

--- a/EvernoteClone/View/NotesWindow.xaml
+++ b/EvernoteClone/View/NotesWindow.xaml
@@ -51,7 +51,8 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <ListView DockPanel.Dock="Left" Width="250" ItemsSource="{Binding Notes}">
+        <ListView DockPanel.Dock="Left" Width="250" ItemsSource="{Binding Notes}"
+                  SelectedItem="{Binding SelectedNote, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <uc:DisplayNote Note="{Binding}"/>
