Set the second stack panel to collapsed

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -10,7 +10,7 @@
         <StackPanel>
             
         </StackPanel>
-        <StackPanel>
+        <StackPanel Visibility="Collapsed">
             
         </StackPanel>
     </Grid>
