Add register button in the first stack panel

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -8,7 +8,7 @@
         Title="LoginWindow" Height="300" Width="300">
     <Grid>
         <StackPanel>
-            
+            <Button Content="Register" />
         </StackPanel>
         <StackPanel Visibility="Collapsed">
             
