Update LoginWindow: - add namespace linked to view models called vm - add window resource disctionary with LoginVm as vm - bind the grid datacontext to the vm resource just added - bind the visibility of the first stack panel to the LoginVisibility value - bind the visibility of the second stack panel to the RegisterVisibility value - bind the command action of register mouse left button down trigger to the ShowRegisterCommand - add a login text block in the second stack panel, binded to a similar mouse left button down trigger event (ShowRegisterCommand because invert the state of isShowingRegister and then display the correct stack panel)

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -5,20 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:EvernoteClone.View"
+        xmlns:vm="clr-namespace:EvernoteClone.ViewModel"
         mc:Ignorable="d"
         Title="LoginWindow" Height="300" Width="300">
-    <Grid>
-        <StackPanel>
+    <Window.Resources>
+        <ResourceDictionary>
+            <vm:LoginVM x:Key="vm"/>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource vm}">
+        <StackPanel Visibility="{Binding LoginVisibility}">
             <TextBlock Text="Register" Foreground="DodgerBlue" TextDecorations="Underline">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonDown">
-                        <i:InvokeCommandAction />
+                        <i:InvokeCommandAction Command="{Binding ShowRegisterCommand}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </TextBlock>
         </StackPanel>
-        <StackPanel Visibility="Collapsed">
-            
+        <StackPanel Visibility="{Binding RegisterVisibility}">
+            <TextBlock Text="Login" Foreground="DodgerBlue" TextDecorations="Underline">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                        <i:InvokeCommandAction Command="{Binding ShowRegisterCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBlock>
         </StackPanel>
     </Grid>
 </Window>
