--- a/EvernoteClone/App.xaml
+++ b/EvernoteClone/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EvernoteClone"
-             StartupUri="/View/LoginWindow.xaml">
+             StartupUri="/View/NotesWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
