Update LoginWindow: - add margin of 10 in the login stack panel - add username textblock inside the login stack panel - add username textbox inside the login stack panel, binded with the username of the user - add password textblock inside the login stack panel - add password textbox inside the login stack panel, binded with the password of the user - add button to login, binded with the LoginCommand and with command parameter the User itself - add margin of 10 in the register stack panel - add username textblock inside the register stack panel - add username textbox inside the register stack panel, binded with the username of the user - add name textblock inside the register stack panel - add name textbox inside the register stack panel, binded with the name of the user - add lastname textblock inside the register stack panel - add lastname textbox inside the register stack panel, binded with the lastname of the user - add password textblock inside the register stack panel - add password textbox inside the register stack panel, binded with the password of the user - add password confirm textblock inside the register stack panel - add password confirm textbox inside the register stack panel, binded with the password confirm of the user - add button to register, binded with the RegisterCommand and with command parameter the User itself

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -16,7 +16,12 @@
         </ResourceDictionary>
     </Window.Resources>
     <Grid DataContext="{StaticResource vm}">
-        <StackPanel Visibility="{Binding LoginVisibility}">
+        <StackPanel Visibility="{Binding LoginVisibility}" Margin="10">
+            <TextBlock Text="Username:" />
+            <TextBox Text="{Binding User.Username}"/>
+            <TextBlock Text="Password:" />
+            <TextBox Text="{Binding User.Password}"/>
+            <Button Content="Login" Margin="0,5" Command="{Binding LoginCommand}" CommandParameter="{Binding User}"/>
             <TextBlock Text="Register" Foreground="DodgerBlue" TextDecorations="Underline">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonDown">
@@ -25,7 +30,18 @@
                 </i:Interaction.Triggers>
             </TextBlock>
         </StackPanel>
-        <StackPanel Visibility="{Binding RegisterVisibility}">
+        <StackPanel Visibility="{Binding RegisterVisibility}" Margin="10">
+            <TextBlock Text="Username:" />
+            <TextBox Text="{Binding User.Username}"/>
+            <TextBlock Text="Name:" />
+            <TextBox Text="{Binding User.Name}"/>
+            <TextBlock Text="Last name:" />
+            <TextBox Text="{Binding User.Lastname}"/>
+            <TextBlock Text="Password:" />
+            <TextBox Text="{Binding User.Password}"/>
+            <TextBlock Text="Confirm password:" />
+            <TextBox Text="{Binding User.ConfirmPassword}"/>
+            <Button Content="Register" Margin="0,5" Command="{Binding RegisterCommand}" CommandParameter="{Binding User}"/>
             <TextBlock Text="Login" Foreground="DodgerBlue" TextDecorations="Underline">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonDown">
