--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -15,7 +15,7 @@
             <vm:LoginVM x:Key="vm"/>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid DataContext="{StaticResource vm}">
+    <Grid DataContext="{StaticResource vm}" VerticalAlignment="Center">
         <StackPanel Visibility="{Binding LoginVisibility}" Margin="10">
             <TextBlock Text="Email:" />
             <TextBox Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
