Update resize mode of login window to CanResize

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -7,8 +7,7 @@
         xmlns:local="clr-namespace:EvernoteClone.View"
         xmlns:vm="clr-namespace:EvernoteClone.ViewModel"
         mc:Ignorable="d"
-        WindowStyle="None"
-        ResizeMode="NoResize"
+        ResizeMode="CanMinimize"
         Title="LoginWindow" Height="300" Width="300" BorderThickness="1,1,1,1">
     <Window.Resources>
         <ResourceDictionary>
