Update LoginWindow, add triggers to start the MoveUp storyboard. In particular, added trigger on window load and an other trigger on the click of login text block (second stack panel)

--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -74,9 +74,15 @@
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseLeftButtonDown">
                         <i:InvokeCommandAction Command="{Binding ShowRegisterCommand}"/>
+                        <i:ControlStoryboardAction Storyboard="{StaticResource MoveUp}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </TextBlock>
         </StackPanel>
     </Grid>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:ControlStoryboardAction Storyboard="{StaticResource MoveUp}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 </Window>
