--- a/EvernoteClone/View/LoginWindow.xaml
+++ b/EvernoteClone/View/LoginWindow.xaml
@@ -34,13 +34,13 @@
             </Storyboard>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid DataContext="{StaticResource vm}" VerticalAlignment="Center" Margin="10">
+    <Grid DataContext="{StaticResource vm}" VerticalAlignment="Center">
         <StackPanel Visibility="{Binding LoginVisibility}" Margin="10">
             <TextBlock Text="Email:" />
             <TextBox Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBlock Text="Password:" />
             <TextBox Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button x:Name="button" Content="Login" Margin="0,5" Command="{Binding LoginCommand}" CommandParameter="{Binding User}" RenderTransformOrigin="0.5,0.5" Width="255" Height="20">
+            <Button x:Name="button" Content="Login" Margin="0,5" Command="{Binding LoginCommand}" CommandParameter="{Binding User}" RenderTransformOrigin="0.5,0.5" Width="278" Height="20">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
